# FactorioCalc

./: cspell.config.yaml  cspell.json  factorio-words.txt  item_types.py  items.py  pyproject.toml  recipes.py
