[tool.poetry]
name = "factorio"
version = "0.1.0"
description = ""
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.2"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

